css/abilene_seniors_main.css
/******************* PAGE BASICS **********************/
textarea {resize: none;}

body {background-color: rgb(252, 246, 241);
    margin: auto;
    width: 100%;
    height: 100%;}

hr {border: 0;
    height: 1px;
    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); }

#wrapper    {margin:auto;
            width: 1200px;
            height: 400px;}








/******************* NAME NAV BAR **********************/
.top_scroll {margin-top: 5px;
            position: fixed;
            z-index: 20;
            top: 0px;}

.brown_bar  {height: 350px;
            width: 100%;
            display: block;
            position: fixed;
            margin-top: 30px;
            z-index: -20;
            background: rgba(222, 208, 196, .5);
            background: -webkit-linear-gradient(left, rgba(222, 208, 196, .0), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .0)); /* For Safari 5.1 to 6.0 */
            background: -o-linear-gradient(right, rgba(222, 208, 196, .0), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .0)); /* For Opera 11.1 to 12.0 */
            background: -moz-linear-gradient(right, rgba(222, 208, 196, .0), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .0)); /* For Firefox 3.6 to 15 */
            background: linear-gradient(to right, rgba(222, 208, 196, .0), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .7), rgba(222, 208, 196, .0)); /* Standard syntax (must be last) */}

.nav_bar_background    {height: 40px;
                        width: 100%;
                        display: block;
                        position: fixed;
                        margin-top: 50px;
                        z-index: 10;
                        background: rgba(255,255,255,.7);}

.nav_bar    {height: 40px;
            width: 1000px;
            display: block;
            margin: auto;
            position: fixed;
            top: 0%;
            left: 50%;
            margin-left: -500px;
            margin-top: 50px;
            z-index: 25;}

#home   {width: 105px;}
#link_1 {width: 132px;}

#search {width: 125px;}
#link_2 {width: 152px;}

#contact {width: 130px;}
#link_3 {width: 157px;}

#definitions {width: 175px;}
#link_4 {width: 202px;}

#blog {width: 105px;}
#link_5 {width: 132px;}

.nav_bar table  {width: 900px;
                border-collapse: collapse;
                text-align: center;
                margin: auto;}
.nav_bar td     {height: 36px;}

.pointer    {float:left;
            display:block;}

.backup_image   {margin: auto;
                position: fixed;
                top: -15;
                left: 50%;
                margin-left: -500px;
                z-index: -10;
                display: block;}

.abilene_logo   {margin: auto;
                position: fixed;
                top: -5px;
                left: 50%;
                margin-left: -500px;
                z-index: 10;
                display: block;}

#link_1 path {transition: .8s;}
#link_1:hover #home path {fill:#1C86EE;}

#link_2 path {transition: .8s;}
#link_2:hover #search path {fill:#1C86EE;}

#link_3 path {transition: .8s;}
#link_3:hover #contact path {fill:#1C86EE;}

#link_4 path {transition: .8s;}
#link_4:hover #definitions path {fill:#1C86EE;}

#link_5 path {transition: .8s;}
#link_5:hover #blog path {fill:#1C86EE;}


#seniors_canvas     {box-shadow: 5px 5px 15px #A2A2A2;
                    margin: auto;
                    z-index: 0;
                    position: fixed;
                    top: 0%;
                    left: 50%;
                    margin-left: -500px;
                    display: block;}

.canvas_fade        {height: 413px;
                    width: 1000px;
                    margin: auto;
                    z-index: 1;
                    position: fixed;
                    top: 0%;
                    left: 50%;
                    background: rgba(255,250,240, .25);
                    margin-left: -500px;
                    display: block;}


/******************* INDEX PAGE **********************/
.content_wrapper    {width: 1100px;
                    margin: auto;
                    position: relative;
                    top: 393px;
                    z-index: -25;}

.index_title    {position: relative;
                top:30px;
                left: 100px;
                width: 500px;}

.index_text     {position: relative;
                top:40px;
                left: 100px;
                width: 500px;
                height: 800px;}

.index_pic      {float: right;
                height: 455px;
                width: 350px;
                position: relative;
                top: -810px;
                left: -70px;
                box-shadow: 5px 5px 10px #D5D5D5;
                border: 1px solid black;}





/******************* CONTACT PAGE **********************/
#contact_wrapper {position:fixed;
                 top: 0px;
                 left: 0px;
                 width: 100%;
                 height: 100%;
                 background-color: rgba(255,255,255, .5);
                 visibility: visible;
                 z-index: 1;
                 }
                 

   
            





/******************* FOOTER **********************/
#footer_scroll {position: fixed;
                bottom: 0px;
                z-index: 20;}

#footer_blocker {position: fixed;
                bottom: 0px;
                z-index: 19;
                height: 30px;
                width: 1200px;
                background: rgb(252, 246, 241);}
        

